# Prompt-Shield-Gateway

./: .gitignore  Cargo.toml  README.md  best_provided_data_accuracy.ipynb  download_model.py
model_service/: evaluate_models.py  fetch_shieldlm.py  requirements.txt  server.py  train.py
model_service/data/: shieldlm_sample_info.json  shieldlm_sample_test.jsonl  shieldlm_sample_train.jsonl  shieldlm_sample_validation.jsonl  train.example.jsonl  validation.example.jsonl
model_service/data/shieldlm/: test.jsonl  validation.jsonl
src/: core.rs  embedded.rs  gateway.rs  lib.rs  main.rs  observability.rs
